--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -84,6 +84,15 @@ form {
   }
 }
 
+.topForm {
+  margin-top: 20px;
+}
+
+.button {
+  width: 60px;
+  margin: 10px auto;
+}
+
 .button-row {
   display: flex;
   justify-content: space-between;
