--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -93,6 +93,15 @@ form {
   margin: 10px auto;
 }
 
+.link {
+  font-size: 0.8rem;
+}
+
+.title {
+  padding-top: 20px;
+  line-height: 0;
+}
+
 .button-row {
   display: flex;
   justify-content: space-between;
